--- a/kcrud-core/src/main/resources/config/config.conf
+++ b/kcrud-core/src/main/resources/config/config.conf
@@ -33,10 +33,18 @@ ktor {
 		# reload classes/resources when modified.
 		watch: [classes, resources]
 
-		# Timeout in seconds for reading/writting responses to client.
-		# https://api.ktor.io/ktor-server/ktor-server-netty/io.ktor.server.netty/-netty-application-engine/-configuration/index.html
-		requestReadTimeoutSeconds = 0 # "0" is infinite.
+		// Timeout settings for handling client requests and server responses.
+		// https://api.ktor.io/ktor-server/ktor-server-netty/io.ktor.server.netty/-netty-application-engine/-configuration/index.html
+
+		// Time to wait for reading the client's request.
+		// A value of "0" disables the timeout, allowing the server to wait indefinitely.
+		// This can be useful for large file uploads or slow client connections but may
+		// expose the server to risks like resource exhaustion during prolonged requests.
+		requestReadTimeoutSeconds = 0
 		requestReadTimeoutSeconds = ${?KDOC_KTOR_DEPLOYMENT_REQUEST_READ_TIMEOUT_SECONDS}
+		// Time to wait for sending the response to the client.
+		// A non-zero value ensures the server doesn't hang indefinitely when the client
+		// is slow or unresponsive during response transmission
 		responseWriteTimeoutSeconds = 10
 		responseWriteTimeoutSeconds = ${?KDOC_KTOR_DEPLOYMENT_RESPONSE_WRITE_TIMEOUT_SECONDS}
 
