--- a/kcrud-system/scheduler/src/main/resources/quartz.properties
+++ b/kcrud-system/scheduler/src/main/resources/quartz.properties
@@ -6,9 +6,12 @@
 #
 # https://www.quartz-scheduler.org/documentation/2.4.0-SNAPSHOT/configuration.html
 # https://documentation.softwareag.com/onlinehelp/Rohan/quartz_223/2-2-3_Quartz_Scheduler_Configuration_Guide.pdf
+# https://www.quartz-scheduler.org/documentation/quartz-2.3.0/configuration/ConfigJDBCJobStoreClustering.html
+
 #============================================================================
 # Configure Main Scheduler Properties
 #============================================================================
+
 # The unique name for your scheduler instance, useful for identification in logs.
 org.quartz.scheduler.instanceName=KcrudScheduler
 # Automatically generates a unique ID for this scheduler instance, essential when using clustering.
@@ -51,8 +54,12 @@ org.quartz.jobStore.class=org.quartz.impl.jdbcjobstore.JobStoreTX
 # and share the load by using the same database.
 org.quartz.jobStore.isClustered=true
 # Defines how often (in milliseconds) scheduler instances in a cluster check in with
-# each other to indicate they are running; 20000 means every 20 seconds.
-org.quartz.jobStore.clusterCheckinInterval=20000
+# each other to indicate they are running.
+# Changing this value affects the quickness of detecting failed instances.
+# Increasing this value will make node A and node B check-in time's gaps larger, giving the nodes more time to check in.
+# Increasing this value will increase the time for job failover in the case of an actual node failure.
+org.quartz.jobStore.clusterCheckinInterval=30000
+
 # Specifies the delegate class that Quartz uses to interact with the database;
 # StdJDBCDelegate is suitable for most standard databases.
 org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.StdJDBCDelegate
