Updated dependencies: ktor = "3.0.3"

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,3 +7,5 @@ disableOptimizations=false
 # https://kotlinlang.org/api/kotlinx.coroutines/kotlinx-coroutines-debug/
 # https://github.com/Kotlin/kotlinx.coroutines/blob/master/docs/topics/debugging.md
 enhanceCoroutinesDebugging=false
+# https://kotlinlang.org/docs/dokka-migration.html#enable-the-new-dokka-gradle-plugin
+org.jetbrains.dokka.experimental.gradle.pluginMode=V2EnabledWithHelpers
