Updated to dokka 2

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,5 +7,6 @@ disableOptimizations=false
 # https://kotlinlang.org/api/kotlinx.coroutines/kotlinx-coroutines-debug/
 # https://github.com/Kotlin/kotlinx.coroutines/blob/master/docs/topics/debugging.md
 enhanceCoroutinesDebugging=false
-# https://kotlinlang.org/docs/dokka-migration.html#enable-the-new-dokka-gradle-plugin
-org.jetbrains.dokka.experimental.gradle.pluginMode=V2EnabledWithHelpers
+# https://kotlinlang.org/docs/dokka-migration.html
+org.jetbrains.dokka.experimental.gradle.pluginMode=V2Enabled
+org.jetbrains.dokka.experimental.gradle.pluginMode.noWarn=true
